# ML-ZOOMCAMP-MidTermProject

./: Dockerfile  MetaDataExploaration.md  README.md  draft_v1.ipynb  dv.pkl  finance_dev.py  main.py  notebook01_data_preprocessing.ipynb  predict.py  project_notebook_v1.ipynb  pyproject.toml  train.py  xgb_model.json
